--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <label for="ethAmount">ETH Amount</label>
     <input id="ethAmount" placeholder="0.1" />
     <button type="button" id="fundButton">Buy Coffee</button>
+    <button id="withdrawButton">Withdraw</button>
 </body>
 
 <script src="./index-js.js" type="module"></script>
