--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <button id="withdrawButton">Withdraw</button>
 </body>
 
-<script src="./index-js.js" type="module"></script>
+<script src="./index-ts.ts" type="module"></script>
 
 </html>
