--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <input id="ethAmount" placeholder="0.1" />
     <button type="button" id="fundButton">Buy Coffee</button>
     <button id="withdrawButton">Withdraw</button>
+    <button id="AddresstoAmountFundedButton">Get Address-To-Amount-Funded</button>
 </body>
 
-<script src="./index-ts.ts" type="module"></script>
+<script src="./index-js.js" type="module"></script>
 
 </html>
